没能运行的版本=-=

--- a/app/index.html
+++ b/app/index.html
@@ -6,23 +6,25 @@
   <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <ul class="menu">
-    <li><a ui-sref="view1">view1</a></li>
-    <li><a ui-sref="view2">view2</a></li>
-  </ul>
+
+  <div class="header"></div>
 
   <div ui-view></div>
+
+  <div class="footer"></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="bower_components/angular-cookie/angular-cookie.min.js"></script>
+
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="login/login.js"></script>
+  <script src="main/main.js"></script>
+  <script src="common/session.js"></script>
 </body>
 </html>
