加入 Bootstrap，美化页面 登录相关逻辑已完成

--- a/app/index.html
+++ b/app/index.html
@@ -3,28 +3,59 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>迎新系统</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="renderer" content="webkit">
+
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="main/main.css">
+
 </head>
 <body>
+  <nav class="navbar navbar-default navbar-inverse" ng-controller="myAppCtrl">
+    <div class="container" style="width: 700px">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" ui-sref="main">中山大学迎新系统</a>
+      </div>
 
-  <div class="header"></div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li ng-class="{'active': state=='main'}"><a ui-sref="main">首页</a></li>
+          <li ng-class="{'active': state=='analysis'}"><a ui-sref="analysis">统计</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li ng-hide="isLogin"><a ui-sref="login">登录</a></li>
+          <li ng-show="isLogin" class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown">用户：{{userName}}</a>
+            <ul class="dropdown-menu">
+              <li><a href="javascript:void(0);" ng-click="logout()">退出</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 
-  <div ui-view></div>
-
-  <div class="footer"></div>
+  <div ui-view class="container-fluid"></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <script src="bower_components/angular-cookie/angular-cookie.min.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
   <script src="app.js"></script>
   <script src="login/login.js"></script>
   <script src="main/main.js"></script>
+  <script src="analysis/analysis.js"></script>
   <script src="common/session.js"></script>
 </body>
 </html>
