--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,8 +1,23 @@
-<form ng-controller="loginController">
-    <label for="userNameId">用户名</label>
-    <input type="text" id="userNameId" ng-model="user.name"/>
-    <label for="userPasswordId">密码</label>
-    <input type="password" id="userPasswordId" ng-model="user.password"/>
-    <button id="submit" ng-click="submit()">提交</button>
-    <button id="reset" ng-click="reset()">重置</button>
-</form>
+<div class="container" style="width: 400px;margin-top: 50px;">
+    <form class="form-horizontal" ng-controller="loginController">
+        <div class="form-group">
+            <label class="col-sm-3" for="userNameId">用户名：</label>
+            <div class="col-sm-9">
+                <input class="form-control" type="text" id="userNameId" ng-model="user.name"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3" for="userPasswordId">密码：</label>
+            <div class="col-sm-9">
+                <input class="form-control" type="password" id="userPasswordId" ng-model="user.password"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-9">
+                <button id="submit" class="btn btn-success" ng-click="submit()">提交</button>
+                <button id="reset" class="btn btn-default" ng-click="reset()">重置</button>
+            </div>
+        </div>
+    </form>
+</div>
+
