--- a/app/main/main.html
+++ b/app/main/main.html
@@ -1,30 +1,50 @@
-<div id="sidebar" ng-controller="sidebarCtrl">
-    <div id="pointDiv">
+<div id="sidebar" class="container" style="width: 300px;float: left">
+    <div class="row">
         <label for="pointSelect">当前报到点：</label>
         <select name="point" id="pointSelect"></select>
     </div>
-
-    <div id="queryDiv">
-        <form>
-            <label for="khInput">学生考号：</label>
-            <input type="text" id="khInput" ng-model="stuQuery.kh"/>
-            <label for="tzshInput">通知书号：</label>
-            <input type="text" id="tzshInput" ng-model="stuQuery.tzsh"/>
-            <label for="sfzhInput">身份证号：</label>
-            <input type="text" id="sfzhInput" ng-model="stuQuery.sfzh"/>
-            <label for="xhInput">学生学号：</label>
-            <input type="text" id="xhInput" ng-model="stuQuery.xh"/>
-            <label for="xmInput">学生姓名：</label>
-            <input type="text" id="xmInput" ng-model="stuQuery.xm"/>
-
-            <button ng-click="queryStudent()">查询</button>
-            <button ng-click="reset()">重置</button>
+    <div class="row" id="searchDiv">
+        <form class="form-horizontal">
+            <div class="form-group">
+                <label class="col-sm-4" for="khInput">学生考号：</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" id="khInput" ng-model="stuQuery.kh"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4" for="tzshInput">通知书号：</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" id="tzshInput" ng-model="stuQuery.tzsh"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4" for="sfzhInput">身份证号：</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" id="sfzhInput" ng-model="stuQuery.sfzh"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4" for="xhInput">学生学号：</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" id="xhInput" ng-model="stuQuery.xh"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4" for="xmInput">学生姓名：</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" id="xmInput" ng-model="stuQuery.xm"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-8">
+                    <button class="btn btn-success btn-sm" ng-click="queryStudent()">查询</button>
+                    <button class="btn btn-default btn-sm" ng-click="reset()">重置</button>
+                </div>
+            </div>
         </form>
     </div>
-
-    <div id="analysisDiv">
-
-    </div>
+</div>
+<div class="container-fluid" style="float: left">
+    <div ui-view></div>
 </div>
 
-<div ui-view></div>
