--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li ng-hide="isLogin"><a ui-sref="login">登录</a></li>
           <li ng-show="isLogin" class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown">用户：{{userName}}</a>
+            <a class="dropdown-toggle" data-toggle="dropdown">用户：<span ng-bind="userName"></span></a>
             <ul class="dropdown-menu">
               <li><a href="javascript:void(0);" ng-click="logout()">退出</a></li>
             </ul>
