--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,23 +1,32 @@
-<div class="container" style="width: 400px;margin-top: 50px;">
-    <form class="form-horizontal" ng-controller="loginController">
-        <div class="form-group">
-            <label class="col-sm-3" for="userNameId">用户名：</label>
-            <div class="col-sm-9">
-                <input class="form-control" type="text" id="userNameId" ng-model="user.name"/>
-            </div>
+<div ng-controller="loginController">
+    <div class="container" style="width: 700px;">
+        <div ng-show="showAlert" ng-class="{'alert-warning': alertType=='warning', 'alert-danger': alertType=='danger'}" class="alert" role="alert" ng-bind="alertMsg"></div>
+    </div>
+    <div class="container" style="width: 400px;margin-top: 20px;">
+        <div ng-show="isLogin">
+            <h1>你已经登陆了~骚年</h1>
         </div>
-        <div class="form-group">
-            <label class="col-sm-3" for="userPasswordId">密码：</label>
-            <div class="col-sm-9">
-                <input class="form-control" type="password" id="userPasswordId" ng-model="user.password"/>
+        <form class="form-horizontal" ng-hide="isLogin">
+            <div class="form-group">
+                <label class="col-sm-3" for="userNameId">用户名：</label>
+                <div class="col-sm-9">
+                    <input class="form-control" type="text" id="userNameId" ng-model="user.name"/>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-9">
-                <button id="submit" class="btn btn-success" ng-click="submit()">提交</button>
-                <button id="reset" class="btn btn-default" ng-click="reset()">重置</button>
+            <div class="form-group">
+                <label class="col-sm-3" for="userPasswordId">密码：</label>
+                <div class="col-sm-9">
+                    <input class="form-control" type="password" id="userPasswordId" ng-model="user.password"/>
+                </div>
             </div>
-        </div>
-    </form>
+            <div class="form-group">
+                <div class="col-sm-offset-3 col-sm-9">
+                    <button id="submit" class="btn btn-success" ng-click="submit()">提交</button>
+                    <button id="reset" class="btn btn-default" ng-click="reset()">重置</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
+
 
