--- a/app/main/main.html
+++ b/app/main/main.html
@@ -1,4 +1,4 @@
-<div id="sidebar" class="container" style="width: 300px;float: left">
+<div id="sidebar" class="container" style="width: 300px;float: left" ng-controller="sidebarCtrl">
     <div class="row">
         <label for="pointSelect">当前报到点：</label>
         <select name="point" id="pointSelect"></select>
