--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,27 +1,27 @@
-<div ng-controller="loginController">
+<div ng-controller="loginCtrl">
     <div class="container" style="width: 700px;">
         <div ng-show="showAlert" ng-class="{'alert-warning': alertType=='warning', 'alert-danger': alertType=='danger'}" class="alert" role="alert" ng-bind="alertMsg"></div>
     </div>
     <div class="container" style="width: 400px;margin-top: 20px;">
-        <div ng-show="isLogin">
+        <div ng-hide="loginUser==null">
             <h1>你已经登陆了~骚年</h1>
         </div>
-        <form class="form-horizontal" ng-hide="isLogin">
+        <form name="loginForm" class="form-horizontal" ng-show="loginUser==null" ng-submit="submit(loginForm.$valid)" novalidate>
             <div class="form-group">
                 <label class="col-sm-3" for="userNameId">用户名：</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" id="userNameId" ng-model="user.name"/>
+                    <input class="form-control" type="text" id="userNameId" ng-model="user.userName" required/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3" for="userPasswordId">密码：</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="password" id="userPasswordId" ng-model="user.password"/>
+                    <input class="form-control" type="password" id="userPasswordId" ng-model="user.userPassword" required/>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
-                    <button id="submit" class="btn btn-success" ng-click="submit()">提交</button>
+                    <button type="submit" id="submit" class="btn btn-success">提交</button>
                     <button id="reset" class="btn btn-default" ng-click="reset()">重置</button>
                 </div>
             </div>
