--- a/app/index.html
+++ b/app/index.html
@@ -10,20 +10,23 @@
 
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
-  <link rel="stylesheet" href="main/main.css">
+
+  <link rel="stylesheet" href="resources/css/nav.css"/>
+  <link rel="stylesheet" href="resources/css/main/main.css">
 
 </head>
 <body ng-controller="appCtrl">
-  <nav class="navbar navbar-default navbar-inverse" ng-controller="navBarCtrl">
-    <div class="container" style="width: 700px">
+  <nav id="navBar" class="navbar navbar-default navbar-inverse" ng-controller="navBarCtrl">
+    <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" ui-sref="main">中山大学迎新系统</a>
+        <a class="navbar-brand" ui-sref="main" style="font-family: 'SimHei'">中山大学迎新系统</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li ng-class="{'active': state=='main'}"><a ui-sref="main">首页</a></li>
           <li ng-class="{'active': state=='analysis'}"><a ui-sref="analysis">统计</a></li>
+          <li ng-class="{'active': state=='manage'}"><a ui-sref="manage">管理</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li ng-show="loginUser==null"><a ui-sref="login">登录</a></li>
@@ -48,16 +51,24 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="bower_components/angular-smart-table/dist/smart-table.min.js"></script>
+
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 
-
   <script src="app.js"></script>
-  <script src="login/login.js"></script>
-  <script src="main/main.js"></script>
-  <script src="analysis/analysis.js"></script>
-  <script src="common/session.js"></script>
+
+  <script src="resources/js/index.js"></script>
+
+  <script src="resources/js/common/session.js"></script>
+
+  <script src="resources/js/login/login.js"></script>
+  <script src="resources/js/main/sidebar.js"></script>
+  <script src="resources/js/stuList/stuList.js"></script>
+  <script src="resources/js/analysis/analysis.js"></script>
+  <script src="resources/js/manage/manage.js"></script>
+
 
 </body>
 </html>
