--- a/app/index.html
+++ b/app/index.html
@@ -56,12 +56,14 @@
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
   <script src="app.js"></script>
 
   <script src="resources/js/index.js"></script>
 
   <script src="resources/js/common/session.js"></script>
+  <script src="resources/js/common/promptModal.js"></script>
 
   <script src="resources/js/login/login.js"></script>
   <script src="resources/js/main/sidebar.js"></script>
